# meusic-linux

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
meusic-gtk/: Cargo.toml  build.rs
meusic-gtk/packaging/: build-appimage.sh  com.sarta.meusic.gtk.desktop
meusic-gtk/resources/: meusic.gresource.xml
meusic-gtk/src/: art.rs  library.rs  main.rs  mpris.rs  player.rs  session.rs  settings.rs  stations.rs  track_object.rs  util.rs
scripts/: gen-icon.mjs  install-linux-desktop.sh
src/: App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  mpris.rs  radio.rs
src/assets/: radio-stations.json
src/audio/: engine.ts
src/components/: AboutDialog.tsx  BottomBar.tsx  Equalizer.tsx  FolderTree.tsx  GradientBackground.tsx  GroupList.tsx  Library.tsx  MiniPlayer.tsx  NowPlayingOverlay.tsx  RadioList.tsx  RadioNowPlaying.tsx  SettingsMenu.tsx  StationDialog.tsx  TopBar.tsx  Visualizer.tsx  icons.tsx
src/hooks/: usePlayer.ts  useSettings.ts  useStations.ts
src/lib/: api.ts  appInfo.ts  colors.ts  format.ts  image.ts  miniState.ts  playbackError.test.ts  playbackError.ts  stationColor.ts  views.ts
