[package]
name = "meusic-gtk"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
gstreamer = "0.25.2"
gtk4 = { version = "0.11", features = ["v4_10", "v4_12"] }
libadwaita = { version = "0.9", features = ["v1_4"] }
lofty = "0.24.0"
rayon = "1.12.0"
relm4 = { version = "0.11.0", features = ["libadwaita"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
walkdir = "2.5.0"
zbus = "5.16.0"
