[package]
name = "meusic-gtk"
version = "0.1.0"
edition = "2024"
description = "Beautiful native local music player for Linux"
license = "MIT"
homepage = "https://github.com/s4rt4/meusic-linux"
repository = "https://github.com/s4rt4/meusic-linux"

[[bin]]
name = "meusic"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
gstreamer = "0.25.2"
gtk4 = { version = "0.11", features = ["v4_10", "v4_12"] }
libadwaita = { version = "0.9", features = ["v1_4"] }
lofty = "0.24.0"
rayon = "1.12.0"
relm4 = { version = "0.11.0", features = ["libadwaita"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
walkdir = "2.5.0"
zbus = "5.16.0"

[build-dependencies]
glib-build-tools = "0.22"

[profile.release]
strip = true
lto = "thin"

# ---- Packaging: `cargo generate-rpm` (after `cargo build --release`) ----------
[package.metadata.generate-rpm]
name = "meusic"
summary = "Beautiful native local music player for Linux"
assets = [
    { source = "target/release/meusic", dest = "/usr/bin/meusic", mode = "0755" },
    { source = "packaging/com.sarta.meusic.gtk.desktop", dest = "/usr/share/applications/com.sarta.meusic.gtk.desktop", mode = "0644" },
    { source = "icons/com.sarta.meusic.gtk.svg", dest = "/usr/share/icons/hicolor/scalable/apps/com.sarta.meusic.gtk.svg", mode = "0644" },
    { source = "../LICENSE", dest = "/usr/share/doc/meusic/LICENSE", mode = "0644" },
]

[package.metadata.generate-rpm.requires]
gstreamer1-plugins-base = "*"
gstreamer1-plugins-good = "*"

# ---- Packaging: `cargo deb` (needs `cargo install cargo-deb`) ------------------
[package.metadata.deb]
name = "meusic"
maintainer = "s4rt4 <surat.sarta@gmail.com>"
copyright = "2026 s4rt4"
license-file = ["../LICENSE", "0"]
extended-description = "A beautiful, native GTK4/libadwaita local music player for Linux: adaptive cover-art gradients, an equalizer, a spectrum visualizer, internet radio, and MPRIS media controls."
section = "sound"
priority = "optional"
depends = "$auto, gstreamer1.0-plugins-base, gstreamer1.0-plugins-good"
assets = [
    ["target/release/meusic", "usr/bin/meusic", "755"],
    ["packaging/com.sarta.meusic.gtk.desktop", "usr/share/applications/", "644"],
    ["icons/com.sarta.meusic.gtk.svg", "usr/share/icons/hicolor/scalable/apps/", "644"],
]
