[package]
name = "meusic"
version = "0.1.0"
description = "A lightweight, Amberol-inspired local music player"
authors = ["Sarta"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "meusic_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
lofty = "0.22"
walkdir = "2"
base64 = "0.22"
rayon = "1"
chrono = "0.4"
# Internet-radio streaming proxy: a loopback HTTP server (tiny_http) that pipes
# upstream streams (ureq) to the <audio> element, stripping ICY metadata.
tiny_http = "0.12"
ureq = "2"

# Linux: native MPRIS2 media-player service (D-Bus) so the GNOME media popup
# gets full metadata incl. cover art. zbus version matches wry's transitive dep.
[target.'cfg(target_os = "linux")'.dependencies]
zbus = "5"
